# daipendency

./: Cargo.toml  README.md
src/: analysers.rs  dependencies.rs  extractors.rs  formatting.rs  languages.rs  lib.rs  library.rs  main.rs  markdown_formatting.rs
src/cli/: extract.rs  extract_dependency.rs  mod.rs
