[package]
name = "daipendency"
version = "1.0.0"
edition = "2021"
description = "Provides AI coding assistants with public API from dependencies"
license = "MIT"
authors = ["Gus Narea"]

[dependencies]
daipendency-extractor = "1.0.1"
daipendency-extractor-rust = "0.1.0"

[dev-dependencies]
assertables = "9.5.0"
