[package]
name = "daipendency"
version = "1.0.1"
edition = "2021"
description = "Provides AI coding assistants with public API from dependencies"
repository = "https://github.com/daipendency/daipendency"
homepage = "https://github.com/daipendency/daipendency"
documentation = "https://docs.rs/daipendency"
license = "MIT"
authors = ["Gus Narea"]

[dependencies]
anyhow = "1.0.95"
daipendency-extractor = "1.0.6"
daipendency-extractor-rust = "0.3.1"

[dev-dependencies]
assertables = "9.5.0"
