[package]
name = "daipendency"
version = "1.2.3"
edition = "2021"
description = "Provides AI coding assistants with public API from dependencies"
repository = "https://github.com/daipendency/daipendency"
homepage = "https://github.com/daipendency/daipendency"
documentation = "https://docs.rs/daipendency"
license = "MIT"
authors = ["Gus Narea"]

[dependencies]
anyhow = "1.0.95"
bpaf = "0.9.15"
daipendency-extractor = "1.0.8"
daipendency-extractor-rust = "0.4.3"
thiserror = "2.0.11"

[dev-dependencies]
assertables = "9.5.0"
tempfile = "3.15.0"

[profile.release]
lto = true
codegen-units = 1
